tests/poof/fixtures/errors/error1.2.cpp
struct foo
{
  int bar;
};

poof(
  func (foo F)
  {
    F.map_members(M)
    {
      M.type.to_capital_case.garbage
    }
  }
)


